# robot_control

./: CMakeLists.txt  README.md  package.xml
config/: control_params.yaml
description/: robot.xacro
launch/: bno055_launch.py  robot_launch.py  rosbridge_websocket.py  rosbridge_websocket_launch.xml  rsp_launch.py  rviz_launch.py  test.py
robot_control/: can_setup.py  pid.py  robot.py
scripts/: GUI.py  omni_controller.py  path_tracking.cpp  path_tracking.py
test/: test-can_bus.py
